# semantic-compress

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  compare_baselines.py  requirements.txt  run_benchmarks.py  visualize.py
benchmarks/benchmark_results/: benchmark_report.md  benchmark_results.json
examples/: compress_photo.py
src/semantic_compress/: __init__.py  __main__.py  compressor.py  energy.py  seam_carving.py
tests/: test_energy.py  test_seam_carving.py
